# us-data

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  Untitled.ipynb  generalStats.ipynb  generate_typestubs.py  main.py  notebook.ipynb  pyproject.toml  pyrightconfig.json  run_pyright.py  t.txt  test.txt  testing.txt  tmp.json
census/: .coveragerc  Makefile  Untitled.ipynb  __init__.py  config.py  exceptions.py  factory.py  getCensus.py  helpers.py  main.py  models.py  notebook.ipynb  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  scratch.py  temp.json  temp.py  test
census/api/: ApiConfig.py  __init__.py  constants.py  fetch.py  getDataBase.py  getData_Base.py  interface.py  models.py  serialization.py
census/api/geography/: getSupportedGeographies.py
census/api/geographyCodeGet/: getGeographyCodes.py
census/api/geographyCodesGet/: __init__.py  fetchGeographyCodes.py
census/api/groups/: getGroups.py
census/api/models/: Domain.py  GeographyItem.py  GeographyResponse.py  Group.py  GroupVariable.py  __init__.py
census/api/utils/: __init__.py  (+2 more)
census/census/: config.py  exceptions.py  getCensus.py  models.py  setup.py
census/client/: census.py
census/dataFrames/: __init__.py  geoDataToDataFame.py  geographyCodesToDataFrame.py  groupDataToDataFrame.py  variablesToDataframe.py
census/dataTransformation/: interface.py  service.py  toDataFrame.py
census/geographies/: interface.py  models.py  service.py
census/geography/: getGeographies.py
census/log/: configureLogger.py  factory.py  filters.py
census/logging/: configureLogger.py  filters.py
census/models/: DatasetType.py  GeoDomain.py  SurveyType.py  __init__.py
census/persistence/: interface.py  onDisk.py
census/stats/: interface.py  service.py
census/tests/: base.py  conftest.py  serviceTestFixtures.py  utils.py
census/utils/: __init__.py  chunk.py  cleanVariableName.py  configureLogger.py  timer.py  unique.py
census/variableRetrieval/: OnDiskCache.py  VariableRetrievalCache.py  VariableRetriever.py  __init__.py  getGeographies.py  getGeographyCodes.py  getGroups.py  getVariables.py  utils.py
census/variables/: models.py
(+413 files in other folders)
