[tool.poetry]
name = "us-data"
version = "0.1.1"
description = "Tool to get and query US Census data"
authors = ["Joel Krim <drawjk705@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"
requests = "^2.25.1"
punq = "^0.4.1"
tqdm = "^4.55.1"
python-dotenv = "^0.15.0"
us = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = { version = "^20.8b1", allow-prereleases = true }
pytest-mock = "^3.5.0"
callee = "^0.3.1"
hypothesis = "^5.47.0"
pytest-sugar = "^0.9.4"
pytest-clarity = "^0.3.0-alpha.0"
pytest-cov = "^2.10.1"
data-science-types = "^0.2.22"
pytest-randomly = "^3.5.0"
poethepoet = "^0.9.0"
pytest-tldr = "^0.2.2"
jupyter_nbextensions_configurator = "^0.4.1"
ipython = "^7.19.0"
jupyterlab = "^3.0.1"
ipywidgets = "^7.6.2"
matplotlib = "^3.3.3"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest -m \"not integration\""
test-integration = "pytest -m integration"
test-coverage = "pytest --cov-report term-missing:skip-covered --cov=us_data tests/"
typing = "pyright . --createstub us callee punq tqdm"
lint = "black . --check"
sort-imports = "isort ."
clean = "rm rf ./**/__pycache__"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
secondary = true
