[tool.poetry]
name = "census"
version = "0.1.0"
description = "tool for getting and querying US Census data"
authors = ["Joel Krim <drawjk705@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.0"
requests = "^2.25.1"
jupyter = "^1.0.0"
punq = "^0.4.1"
tqdm = "^4.55.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = { version = "^20.8b1", allow-prereleases = true }
mypy = "^0.790"
pytest-mock = "^3.5.0"
callee = "^0.3.1"
hypothesis = "^5.47.0"
pytest-sugar = "^0.9.4"
pytest-clarity = "^0.3.0-alpha.0"
pytest-cov = "^2.10.1"
pytest-tldr = "^0.2.2"
flake8 = "^3.8.4"
data-science-types = "^0.2.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
